<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/titulo_config_cuenta"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Los usuario amigos que puedes usar son: \n \n supermascota5 (usuario por defecto) \n pettagramy \n jarrieta31 \n perritoconnor \n mismascotascr"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/etNombreSandbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/et_usuario_sandbox"
                android:inputType="text" />

            <Button
                android:id="@+id/btnGuardarCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:text="@string/btn_guardar_cuenta"
                android:theme="@style/MiBotonRaised" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>